--- a/main.css
+++ b/main.css
@@ -10,3 +10,11 @@
 }
 
 /* Include any custom CSS styling here! */
+
+#year_form {
+    margin-left: 10px;
+}
+
+#region_form {
+    margin_left: 10px;
+}
